# Katra-Agentic-Memory

./: .env.example  CONTRACT-pubsub-bus.md  CONTRACT-rl-loop-closure.md  Dockerfile  README.md  SKILL.md  docker-compose.yml  katra.service
dashboard/: index.html
docs/: AGENT-PUBSUB-GUIDE.md  API-REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRACT-amygdala-valence.md  CONTRACT-bottleneck-rl.md  CONTRACT-pfc-goal-manager.md  DEPLOYMENT.md  Data-Processing-Pipelines.md  MCP-TOOLS.md  MIGRATION.md  OPENCLAW-INTEGRATION.md  QUICKSTART.md
integrations/drive-to-action/: README.md  bridge-drive-to-action.service  bridge.py  session-hook.py
integrations/kolega-code/: .gitignore  IMPLEMENTATION-PLAN.md  README.md  katra-hook.personality.example.json  pyproject.toml
integrations/kolega-code/kolega_katra_bridge/: __init__.py  config.py  formatter.py  hook.py  katra_client.py  logging_setup.py  personality.py  retriever.py
integrations/kolega-code/scripts/: inspect_katra.py  live_conversation_test.py  test_hook.py  test_sources.py
scripts/: adaptive_heartbeat.py  agent_executor.py  backfill-embeddings.mjs  backfill-episodic-embeddings.mjs  migrate_from_cognitive_memory.py  recall-broad.sh  recall-rest.sh  recall-topics.sh  test-memory-layers.sh  test-rest-api.sh
scripts/python/: agent_executor.py  (+6 more)
server/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
watcher/: claude_history_extractor.py  katra-watcher.service  katra_opencode_extractor.py  katra_watcher.py  kolega_code_extractor.py  watcher-config.example.json
(+108 files in other folders)
