[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kolega-katra-bridge"
version = "0.1.0"
description = "Dynamic Katra memory retrieval hook for Kolega Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Kolega" },
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kolega_katra_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
